--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,11 @@
   <meta name="keywords" content="lynk, url shortener, qr code, click analytics, digital marketing, link conversion, link management, link sharing" />
 
   <base href="/">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet" />
 
   <title>Lynk</title>
 </head>
